--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,11 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url(./vendor/normilize.css);
+@import url(./vendor/fonts.css);
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url(./blocks/content.css);
+@import url(./blocks/header.css);
+@import url(./blocks/page.css);
+@import url(./blocks/footer.css);
+@import url(./blocks/gallery.css);
+@import url(./blocks/item.css);
+@import url(./blocks/logo.css);
+@import url(./blocks/popup.css);
