--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -45,6 +45,45 @@
   height: 15px;
 }
 
+.popup__next {
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  border: 0;
+  background-image: url(../images/next.svg);
+  background-position: center center;
+  background-size: cover;
+  cursor: pointer;
+  background-color: transparent;
+  width: 50px;
+  height: 60px;
+  transition: 0.1s ease-out;
+}
+
+.popup__next:hover {
+  opacity: 0.6;
+}
+
+.popup__prev {
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  border: 0;
+  background-image: url(../images/next.svg);
+  background-position: center center;
+  background-size: cover;
+  cursor: pointer;
+  background-color: transparent;
+  width: 50px;
+  height: 60px;
+  transform: rotate(180deg);
+  transition: opacity 0.1s ease-out;
+}
+
+.popup__prev:hover {
+  opacity: 0.6;
+}
+
 .popup__close-btn {
   width: 50px;
   height: 50px;
